:art: 代码优化